2009-02-23  Sven Herzberg  <herzi@gnome-de.org>

	Fixes 571820 - gobject.c: pspec_pool not initialized for interfaces

	Initialize GObjectClass before referencing interfaces.

	* gtkdoc-scangobj.in: keep a reference on the GObjectClass while
	peeking in interfaces' properties

2009-02-23  Stefan Kost  <ensonic@users.sf.net>

	* gtkdoc-mkdb.in:
	  Don't use named entities.

2009-02-23  Stefan Kost  <ensonic@users.sf.net>

	* gtk-doc-single.xsl:
	  Starting point for generating single page html. Needs refactoring with
	  gtk-doc.xsl (common stuff into gtk-doc-html.xsl).

2009-02-23  Stefan Kost  <ensonic@users.sf.net>

	* TODO:
	  With fop-0.94 it works actually, while 0.95 seesm to have the
	  exceptions.

	* gtkdoc-mkpdf.in:
	  Fix var reference.

2009-02-22  Stefan Kost  <ensonic@users.sf.net>

	* TODO:
	* gtkdoc-mkdb.in:
	  Prototype an idea.

2009-02-22  Stefan Kost  <ensonic@users.sf.net>

	* Makefile.am:
	  Dist more files.

	* configure.in:
	  Update status.

	* gtkdoc-mkpdf.in:
	  Remove some crack left from copy'n'paste.

2009-02-22  Stefan Kost  <ensonic@users.sf.net>

	* TODO:
	  Planning.

	* configure.in:
	* gtk-doc.m4:
	* gtk-doc.make:
	* gtk-doc.notmpl.make:
	* gtkdoc-mkpdf.in:
	* tests/gtk-doc.make:
	* tests/gtk-doc.notmpl.make:
	* gtkdoc-mkpdf.in (added):
	  Clean up Makefile rules (be less verbose). Added options to configure to
	  allow selecting the desired output formats. Added initial pdf support (very
	  imature yet, due to several shortcommings of fop - bugs files).

2009-02-21  Stefan Kost  <ensonic@users.sf.net>

	* TODO:
	  Planning.

	* gtkdoc-mkdb.in:
	  Update annotations and fix matching to support parameters.

	* tests/annotations/docs/tester-sections.txt:
	* tests/annotations/src/tester.c:
	* tests/annotations/src/tester.h:
	  Update annotation example and add one more.

2009-02-21  Stefan Kost  <ensonic@users.sf.net>

	* gtkdoc-mkdb.in:
	* help/manual/C/gtk-doc-manual.xml:
	* tests/gobject/src/gobject.c: