@@ -259,7 +259,7 @@ output_signals (void)
   fp = fopen (signals_filename, "w");
   if (fp == NULL)
     {
-      g_warning ("Couldn't open output file: %s : %s", signals_filename, strerror(errno));
+      g_warning ("Couldn't open output file: %s : %s", signals_filename, g_strerror(errno));
       return;
     }
 
@@ -811,7 +811,7 @@ output_object_hierarchy (void)
   fp = fopen (hierarchy_filename, "w");
   if (fp == NULL)
     {
-      g_warning ("Couldn't open output file: %s : %s", hierarchy_filename, strerror(errno));
+      g_warning ("Couldn't open output file: %s : %s", hierarchy_filename, g_strerror(errno));
       return;
     }
   output_hierarchy (fp, G_TYPE_OBJECT, 0);
@@ -862,7 +862,7 @@ static void output_object_interfaces (void)
   fp = fopen (interfaces_filename, "w");
   if (fp == NULL)
     {
-      g_warning ("Couldn't open output file: %s : %s", interfaces_filename, strerror(errno));
+      g_warning ("Couldn't open output file: %s : %s", interfaces_filename, g_strerror(errno));
       return;
     }
   output_interfaces (fp, G_TYPE_OBJECT);
@@ -916,7 +916,7 @@ static void output_interface_prerequisites (void)
   fp = fopen (prerequisites_filename, "w");
   if (fp == NULL)
     {
-      g_warning ("Couldn't open output file: %s : %s", prerequisites_filename, strerror(errno));
+      g_warning ("Couldn't open output file: %s : %s", prerequisites_filename, g_strerror(errno));
       return;
     }
   output_prerequisites (fp, G_TYPE_INTERFACE);
@@ -964,7 +964,7 @@ output_args (void)
   fp = fopen (args_filename, "w");
   if (fp == NULL)
     {
-      g_warning ("Couldn't open output file: %s : %s", args_filename, strerror(errno));
+      g_warning ("Couldn't open output file: %s : %s", args_filename, g_strerror(errno));
       return;
     }
 
